--- a/sale-user/pom.xml
+++ b/sale-user/pom.xml
@@ -5,10 +5,8 @@
 
     <groupId>com.trey</groupId>
     <artifactId>sale-user</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <modules>
-        <module>user-server</module>
-    </modules>
+    <version>1.0.0</version>
+
     <packaging>pom</packaging>
 
     <name>sale-user</name>
