--- a/sale-user/user-server/pom.xml
+++ b/sale-user/user-server/pom.xml
@@ -2,14 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>com.trey</groupId>
+    <artifactId>user-server</artifactId>
+    <version>1.0.0</version>
+
     <parent>
         <artifactId>sale-user</artifactId>
         <groupId>com.trey</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>user-server</artifactId>
-
 
 </project>
